5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1643_2703.log
== TEST (2019-04-08 19:24:48) 
-- CODE:
idade=float(input("digite a idade: "))
if(idade>=18):
	men="eleitor"
else(idade<18):
	men="nao_eleitor"
print(men)
	
	
-- ERROR:
File "XXXX", line 4
    else(idade<18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:25:23) 
-- CODE:
idade=float(input("digite a idade: "))
if(idade>=18):
	men="eleitor"
else:
	men="nao_eleitor"
print(men)
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:25:31) 
-- CODE:
idade=float(input("digite a idade: "))
if(idade>=18):
	men="eleitor"
else:
	men="nao_eleitor"
print(men)
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:25:37) 
-- CODE:
idade=float(input("digite a idade: "))
if(idade>=18):
	men="eleitor"
else:
	men="nao_eleitor"
print(men)
	
	
-- EXECUTION TIME:
0.197899
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
